# cnake

./: CMakeLists.txt  Makefile  README.md
distro-packages/archlinux/: PKGBUILD
distro-packages/gentoo/games-misc/: Manifest
include/: arguments_parser.h  config.h  field.h  snake.h
src/: arguments_parser.c  field.c  field.h  game.c  snake.c  snake.h
win/include/: getopt.h
win/src/: getopt.c
