cmake_minimum_required(VERSION 3.10)
project(cnake C)
set(CMAKE_C_STANDARD 99)
add_executable(cnake src/arguments_parser.c src/field.c src/game.c src/snake.c)
if (WIN32)
    target_sources(cnake PRIVATE win/src/getopt.c)
    target_include_directories(cnake PRIVATE win/include)
    find_path(CURSES_INCLUDE_DIRS curses.h REQUIRED)
    find_library(CURSES_LIBRARIES pdcurses REQUIRED)
else ()
    find_package(Curses REQUIRED)
endif ()
target_include_directories(cnake PRIVATE include ${CURSES_INCLUDE_DIRS})
target_link_libraries(cnake PRIVATE ${CURSES_LIBRARIES})
